# arcade

./: Anchor.toml  README.md
app/: index.html  package.json  vite.config.js
app/scripts/: changeConfig.cjs  setupDice.cjs
app/src/: App.jsx  ArcadeForm.jsx  Dice.jsx  GameInfo.jsx  SquareButton.jsx  fonts.css  idl.json  main.jsx  theme.jsx
programs/casino/: Cargo.toml
programs/casino/src/: lib.rs
programs/dice/: Cargo.toml
programs/dice/src/: lib.rs
programs/lottery/: Cargo.toml
programs/lottery/src/: lib.rs
py/: stats.py
tests/: casino.ts  dice.ts  lottery.ts
