[package]
name = "lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
#anchor-spl = "0.30.1"
solana-program = "1.18.17"
solana-readonly-account = "1.1.0"
keccak = "0.1.5"
sha3 = "0.10.8"
toml_edit = "0.21.0"
arrayref = "0.3.7"
#whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi", branch = "anchor/0.29.0" }
#ahash = { version = "0.8.5", default-features = false }
